分析模板/2026.03.26/周五002_中国vs库拉索_源数据.md
# 赔率分析源数据

> 数据来源：500.com 竞彩足球 | 编号：周五002 | 采集日期：2026-03-26

---

## 一、比赛基本信息

| 字段 | 内容 |
|------|------|
| 主队 | 中国 |
| 客队 | 库拉索 |
| 比赛时间 | 2026-03-27 14:00 |
| 赛事 | 国际赛 |
| 让球 | 1 |
| 主队近况 | 中国近10场战绩3胜2平5负进8球失13球 |
| 客队近况 | 库拉索近10场战绩4胜5平1负进20球失7球 |
| 主队近况走势 |  |
| 主队盘路走势 |  |
| 客队近况走势 |  |
| 客队盘路走势 |  |
| 历史交锋 |  |
| 澳门推荐 |  |

### 近期交战记录（析页）

| 赛事 | 日期 | 主队 | 比分 | 客队 | 让球线 | 盘口 |
|------|------|------|------|------|--------|------|
| 友谊赛 | 26-01-26 | 乌兹别克斯坦 | 2 | : | 2 | 中国 |
| 友谊赛 | 26-01-23 | 中国 | 2 | : | 2 | 莫斯巴达 |
| 友谊赛 | 26-01-20 | 阿拉伯猎鹰FC | 0: | 2 | 中国 | 0 |
| 东亚杯 | 25-07-15 | 中国 | 1 | :0 | 中国香港 | -1.25 |
| 东亚杯 | 25-07-12 | 日本 | 2: | 0 | 中国 | -2.5 |
| 东亚杯 | 25-07-07 | 韩国 | 3: | 0 | 中国 | -1.25 |

---

## 二、初盘赔率（共30家公司）

```python
initial_odds = [
    # 格式: (主胜, 平局, 客胜)  # 公司名
    (3.50, 3.15, 1.90),  # 竞*官*
    (3.10, 3.20, 2.05),  # 威**尔
    (3.41, 3.22, 1.92),  # *门
    (3.60, 3.50, 2.00),  # 立*
    (3.40, 3.60, 1.91),  # **t3*5
    (3.40, 3.70, 1.95),  # I***rw**t*n
    (3.85, 3.50, 1.80),  # S**I
    (3.50, 3.45, 1.97),  # *冠
    (3.80, 3.40, 1.87),  # 伟*
    (3.50, 3.50, 1.98),  # B**n
    (2.96, 3.14, 2.39),  # Pi****le平*
    (3.55, 3.75, 1.96),  # 10**t
    (3.60, 4.00, 1.91),  # C***l
    (3.60, 3.60, 1.88),  # U****t (优*客)
    (3.50, 3.90, 1.88),  # S***t**g**t (博*堂)
    (3.25, 3.45, 2.07),  # 金*博
    (3.45, 3.10, 1.92),  # 香**会
    (4.10, 3.80, 1.88),  # 大巨*
    (4.30, 3.15, 1.90),  # 必*
    (3.60, 3.40, 1.95),  # 18**t
    (3.65, 3.87, 2.05),  # 1x**t
    (3.70, 3.25, 1.98),  # **ts**n
    (3.30, 3.35, 2.05),  # **t-at-H**e
    (3.35, 3.25, 2.08),  # **ts**n S***tsb**k
    (3.80, 3.60, 1.85),  # **tway(必*)
    (3.60, 3.40, 1.83),  # B***eS***ts
    (3.85, 3.50, 1.90),  # C**l**t
    (3.85, 3.80, 1.94),  # DaF***t (大*)
    (4.15, 3.55, 1.88),  # Fon**t
    (3.45, 3.30, 2.05),  # G****nia S***t
]
```

---

## 三、即时赔率（共30家公司）

```python
realtime_odds = [
    # 格式: (主胜, 平局, 客胜)  # 公司名
    (3.73, 3.30, 1.79),  # 竞*官*
    (3.60, 3.30, 1.83),  # 威**尔
    (3.41, 3.22, 1.92),  # *门
    (3.75, 3.50, 1.95),  # 立*
    (3.50, 3.60, 1.90),  # **t3*5
    (3.60, 3.50, 1.95),  # I***rw**t*n
    (3.70, 3.40, 1.90),  # S**I
    (3.65, 3.45, 1.94),  # *冠
    (3.80, 3.30, 1.90),  # 伟*
    (3.70, 3.50, 1.93),  # B**n
    (3.96, 3.34, 1.98),  # Pi****le平*
    (3.85, 3.60, 1.95),  # 10**t
    (3.80, 3.50, 1.95),  # C***l
    (3.60, 3.45, 1.90),  # U****t (优*客)
    (3.70, 3.50, 1.93),  # S***t**g**t (博*堂)
    (3.65, 3.45, 1.94),  # 金*博
    (3.70, 3.10, 1.85),  # 香**会
    (3.85, 3.65, 1.97),  # 大巨*
    (4.20, 3.35, 1.97),  # 必*
    (3.70, 3.35, 1.95),  # 18**t
    (4.04, 3.53, 2.04),  # 1x**t
    (3.70, 3.25, 1.98),  # **ts**n
    (3.90, 3.45, 1.93),  # **t-at-H**e
    (3.70, 3.25, 1.98),  # **ts**n S***tsb**k
    (3.80, 3.40, 1.91),  # **tway(必*)
    (3.75, 3.40, 1.83),  # B***eS***ts
    (4.00, 3.40, 1.90),  # C**l**t
    (3.85, 3.65, 1.97),  # DaF***t (大*)
    (4.00, 3.45, 1.95),  # Fon**t
    (4.00, 3.35, 1.88),  # G****nia S***t
]
```

---

## 四、竞彩胜平负赔率（500.com官方）

| 结果 | 赔率 |
|------|------|
| 主胜（中国赢） | 1.80 |
| 平局 | 3.36 |
| 客胜（库拉索赢） | 3.62 |

---

## 五、赔率变动对比（初盘 → 即时）

| 公司 | 初盘胜 | 即时胜 | 变动 | 初盘平 | 即时平 | 变动 | 初盘负 | 即时负 | 变动 |
|------|--------|--------|------|--------|--------|------|--------|--------|------|
| 竞*官* | 3.50 | 3.73 | ↑ | 3.15 | 3.30 | ↑ | 1.90 | 1.79 | ↓ |
| 威**尔 | 3.10 | 3.60 | ↑ | 3.20 | 3.30 | ↑ | 2.05 | 1.83 | ↓ |
| *门 | 3.41 | 3.41 | — | 3.22 | 3.22 | — | 1.92 | 1.92 | — |
| 立* | 3.60 | 3.75 | ↑ | 3.50 | 3.50 | — | 2.00 | 1.95 | ↓ |
| **t3*5 | 3.40 | 3.50 | ↑ | 3.60 | 3.60 | — | 1.91 | 1.90 | ↓ |
| I***rw**t*n | 3.40 | 3.60 | ↑ | 3.70 | 3.50 | ↓ | 1.95 | 1.95 | — |
| S**I | 3.85 | 3.70 | ↓ | 3.50 | 3.40 | ↓ | 1.80 | 1.90 | ↑ |
| *冠 | 3.50 | 3.65 | ↑ | 3.45 | 3.45 | — | 1.97 | 1.94 | ↓ |
| 伟* | 3.80 | 3.80 | — | 3.40 | 3.30 | ↓ | 1.87 | 1.90 | ↑ |
| B**n | 3.50 | 3.70 | ↑ | 3.50 | 3.50 | — | 1.98 | 1.93 | ↓ |
| Pi****le平* | 2.96 | 3.96 | ↑ | 3.14 | 3.34 | ↑ | 2.39 | 1.98 | ↓ |
| 10**t | 3.55 | 3.85 | ↑ | 3.75 | 3.60 | ↓ | 1.96 | 1.95 | ↓ |
| C***l | 3.60 | 3.80 | ↑ | 4.00 | 3.50 | ↓ | 1.91 | 1.95 | ↑ |
| U****t (优*客) | 3.60 | 3.60 | — | 3.60 | 3.45 | ↓ | 1.88 | 1.90 | ↑ |
| S***t**g**t (博*堂) | 3.50 | 3.70 | ↑ | 3.90 | 3.50 | ↓ | 1.88 | 1.93 | ↑ |
| 金*博 | 3.25 | 3.65 | ↑ | 3.45 | 3.45 | — | 2.07 | 1.94 | ↓ |
| 香**会 | 3.45 | 3.70 | ↑ | 3.10 | 3.10 | — | 1.92 | 1.85 | ↓ |
| 大巨* | 4.10 | 3.85 | ↓ | 3.80 | 3.65 | ↓ | 1.88 | 1.97 | ↑ |
| 必* | 4.30 | 4.20 | ↓ | 3.15 | 3.35 | ↑ | 1.90 | 1.97 | ↑ |
| 18**t | 3.60 | 3.70 | ↑ | 3.40 | 3.35 | ↓ | 1.95 | 1.95 | — |
| 1x**t | 3.65 | 4.04 | ↑ | 3.87 | 3.53 | ↓ | 2.05 | 2.04 | ↓ |
| **ts**n | 3.70 | 3.70 | — | 3.25 | 3.25 | — | 1.98 | 1.98 | — |
| **t-at-H**e | 3.30 | 3.90 | ↑ | 3.35 | 3.45 | ↑ | 2.05 | 1.93 | ↓ |
| **ts**n S***tsb**k | 3.35 | 3.70 | ↑ | 3.25 | 3.25 | — | 2.08 | 1.98 | ↓ |
| **tway(必*) | 3.80 | 3.80 | — | 3.60 | 3.40 | ↓ | 1.85 | 1.91 | ↑ |
| B***eS***ts | 3.60 | 3.75 | ↑ | 3.40 | 3.40 | — | 1.83 | 1.83 | — |
| C**l**t | 3.85 | 4.00 | ↑ | 3.50 | 3.40 | ↓ | 1.90 | 1.90 | — |
| DaF***t (大*) | 3.85 | 3.85 | — | 3.80 | 3.65 | ↓ | 1.94 | 1.97 | ↑ |
| Fon**t | 4.15 | 4.00 | ↓ | 3.55 | 3.45 | ↓ | 1.88 | 1.95 | ↑ |
| G****nia S***t | 3.45 | 4.00 | ↑ | 3.30 | 3.35 | ↑ | 2.05 | 1.88 | ↓ |

> **趋势总结**：4/30家主胜降赔，6/30家平局升赔，10/30家客胜升赔。

---

## 六、快速复制到分析工具

```python
if __name__ == "__main__":

    # 比赛信息
    home_team     = "中国"
    away_team     = "库拉索"
    match_time    = "2026-03-27 14:00"
    league        = "国际赛"
    home_form     = ""
    away_form     = ""
    home_handicap = ""
    away_handicap = ""
    history       = ""
    macao_tip     = ""

    initial_odds = [
        (3.50, 3.15, 1.90),  # 竞*官*
        (3.10, 3.20, 2.05),  # 威**尔
        (3.41, 3.22, 1.92),  # *门
        (3.60, 3.50, 2.00),  # 立*
        (3.40, 3.60, 1.91),  # **t3*5
        (3.40, 3.70, 1.95),  # I***rw**t*n
        (3.85, 3.50, 1.80),  # S**I
        (3.50, 3.45, 1.97),  # *冠
        (3.80, 3.40, 1.87),  # 伟*
        (3.50, 3.50, 1.98),  # B**n
        (2.96, 3.14, 2.39),  # Pi****le平*
        (3.55, 3.75, 1.96),  # 10**t
        (3.60, 4.00, 1.91),  # C***l
        (3.60, 3.60, 1.88),  # U****t (优*客)
        (3.50, 3.90, 1.88),  # S***t**g**t (博*堂)
        (3.25, 3.45, 2.07),  # 金*博
        (3.45, 3.10, 1.92),  # 香**会
        (4.10, 3.80, 1.88),  # 大巨*
        (4.30, 3.15, 1.90),  # 必*
        (3.60, 3.40, 1.95),  # 18**t
        (3.65, 3.87, 2.05),  # 1x**t
        (3.70, 3.25, 1.98),  # **ts**n
        (3.30, 3.35, 2.05),  # **t-at-H**e
        (3.35, 3.25, 2.08),  # **ts**n S***tsb**k
        (3.80, 3.60, 1.85),  # **tway(必*)
        (3.60, 3.40, 1.83),  # B***eS***ts
        (3.85, 3.50, 1.90),  # C**l**t
        (3.85, 3.80, 1.94),  # DaF***t (大*)
        (4.15, 3.55, 1.88),  # Fon**t
        (3.45, 3.30, 2.05),  # G****nia S***t
    ]

    realtime_odds = [
        (3.73, 3.30, 1.79),  # 竞*官*
        (3.60, 3.30, 1.83),  # 威**尔
        (3.41, 3.22, 1.92),  # *门
        (3.75, 3.50, 1.95),  # 立*
        (3.50, 3.60, 1.90),  # **t3*5
        (3.60, 3.50, 1.95),  # I***rw**t*n
        (3.70, 3.40, 1.90),  # S**I
        (3.65, 3.45, 1.94),  # *冠
        (3.80, 3.30, 1.90),  # 伟*
        (3.70, 3.50, 1.93),  # B**n
        (3.96, 3.34, 1.98),  # Pi****le平*
        (3.85, 3.60, 1.95),  # 10**t
        (3.80, 3.50, 1.95),  # C***l
        (3.60, 3.45, 1.90),  # U****t (优*客)
        (3.70, 3.50, 1.93),  # S***t**g**t (博*堂)
        (3.65, 3.45, 1.94),  # 金*博
        (3.70, 3.10, 1.85),  # 香**会
        (3.85, 3.65, 1.97),  # 大巨*
        (4.20, 3.35, 1.97),  # 必*
        (3.70, 3.35, 1.95),  # 18**t
        (4.04, 3.53, 2.04),  # 1x**t
        (3.70, 3.25, 1.98),  # **ts**n
        (3.90, 3.45, 1.93),  # **t-at-H**e
        (3.70, 3.25, 1.98),  # **ts**n S***tsb**k
        (3.80, 3.40, 1.91),  # **tway(必*)
        (3.75, 3.40, 1.83),  # B***eS***ts
        (4.00, 3.40, 1.90),  # C**l**t
        (3.85, 3.65, 1.97),  # DaF***t (大*)
        (4.00, 3.45, 1.95),  # Fon**t
        (4.00, 3.35, 1.88),  # G****nia S***t
    ]
```