分析模板/2026.03.27/周五002_中国vs库拉索_源数据.md
# 赔率分析源数据

> 数据来源：500.com 竞彩足球 | 编号：周五002 | 采集日期：2026-03-27

---

## 一、比赛基本信息

| 字段 | 内容 |
|------|------|
| 主队 | 中国 |
| 客队 | 库拉索 |
| 比赛时间 | 2026-03-27 14:00 |
| 赛事 | 国际赛 |
| 让球 | 1 |
| 主队近况 | 中国近10场战绩3胜2平5负进8球失13球 |
| 客队近况 | 库拉索近10场战绩4胜5平1负进20球失7球 |
| 主队近况走势 | WLLWLL |
| 主队盘路走势 | LWLWLL |
| 客队近况走势 | DWDWWD |
| 客队盘路走势 | WWLWLL |
| 历史交锋 |  |
| 澳门推荐 | 库拉索 贏 |
| 澳门分析 | 中国久疏战阵，而且球队现时实力亦较为有限，此番面对近期保持不败兼且获胜场次不少的库拉索，中国将要输波。 |

### 近期交战记录（析页）

| 赛事 | 日期 | 主队 | 比分 | 客队 | 让球线 | 盘口 |
|------|------|------|------|------|--------|------|
| 友谊赛 | 26-01-26 | 乌兹别克斯坦 | 2 | : | 2 | 中国 |
| 友谊赛 | 26-01-23 | 中国 | 2 | : | 2 | 莫斯巴达 |
| 友谊赛 | 26-01-20 | 阿拉伯猎鹰FC | 0: | 2 | 中国 | 0 |
| 东亚杯 | 25-07-15 | 中国 | 1 | :0 | 中国香港 | -1.25 |
| 东亚杯 | 25-07-12 | 日本 | 2: | 0 | 中国 | -2.5 |
| 东亚杯 | 25-07-07 | 韩国 | 3: | 0 | 中国 | -1.25 |

---

## 二、初盘赔率（共30家公司）

```python
initial_odds = [
    # 格式: (主胜, 平局, 客胜)  # 公司名
    (3.50, 3.15, 1.90),  # 竞*官*
    (3.10, 3.20, 2.05),  # 威**尔
    (3.41, 3.22, 1.92),  # *门
    (3.60, 3.50, 2.00),  # 立*
    (3.40, 3.60, 1.91),  # **t3*5
    (3.40, 3.70, 1.95),  # I***rw**t*n
    (3.85, 3.50, 1.80),  # S**I
    (3.50, 3.45, 1.97),  # *冠
    (4.30, 3.50, 1.80),  # 易*博
    (3.80, 3.40, 1.87),  # 伟*
    (3.50, 3.50, 1.98),  # B**n
    (2.96, 3.14, 2.39),  # Pi****le平*
    (3.55, 3.75, 1.96),  # 10**t
    (3.60, 4.00, 1.91),  # C***l
    (3.75, 3.08, 1.82),  # 利*
    (3.60, 3.60, 1.88),  # U****t (优*客)
    (3.50, 3.90, 1.88),  # S***t**g**t (博*堂)
    (3.85, 3.45, 1.76),  # IBC**t (沙*)
    (4.00, 3.45, 1.72),  # M****on88 (明*)
    (3.25, 3.45, 2.07),  # 金*博
    (3.45, 3.10, 1.92),  # 香**会
    (4.00, 3.45, 1.72),  # 12**t (壹*博)
    (4.10, 3.80, 1.88),  # 大巨*
    (4.30, 3.15, 1.90),  # 必*
    (3.60, 3.40, 1.95),  # 18**t
    (3.65, 3.87, 2.05),  # 1x**t
    (3.70, 3.25, 1.98),  # **ts**n
    (3.85, 3.05, 1.85),  # I***rt*ps
    (3.30, 3.35, 2.05),  # **t-at-H**e
    (4.35, 3.35, 1.78),  # **tf**g
]
```

---

## 三、即时赔率（共30家公司）

```python
realtime_odds = [
    # 格式: (主胜, 平局, 客胜)  # 公司名
    (5.42, 3.65, 1.49),  # 竞*官*
    (6.00, 4.00, 1.44),  # 威**尔
    (5.47, 3.60, 1.48),  # *门
    (6.00, 4.00, 1.53),  # 立*
    (5.25, 4.10, 1.53),  # **t3*5
    (6.50, 3.70, 1.50),  # I***rw**t*n
    (6.00, 3.90, 1.50),  # S**I
    (5.60, 3.85, 1.56),  # *冠
    (5.60, 3.90, 1.56),  # 易*博
    (6.50, 3.70, 1.50),  # 伟*
    (6.00, 4.00, 1.53),  # B**n
    (6.42, 3.99, 1.54),  # Pi****le平*
    (6.00, 4.00, 1.58),  # 10**t
    (6.00, 4.00, 1.55),  # C***l
    (5.70, 3.70, 1.47),  # 利*
    (5.75, 3.80, 1.54),  # U****t (优*客)
    (5.75, 4.00, 1.55),  # S***t**g**t (博*堂)
    (5.40, 3.90, 1.49),  # IBC**t (沙*)
    (5.20, 3.85, 1.50),  # M****on88 (明*)
    (5.60, 3.85, 1.56),  # 金*博
    (4.35, 3.70, 1.58),  # 香**会
    (6.10, 3.45, 1.55),  # 12**t (壹*博)
    (6.20, 4.10, 1.58),  # 大巨*
    (6.00, 4.00, 1.50),  # 必*
    (6.25, 3.50, 1.58),  # 18**t
    (5.16, 4.23, 1.61),  # 1x**t
    (6.40, 3.70, 1.52),  # **ts**n
    (6.25, 3.85, 1.45),  # I***rt*ps
    (6.00, 4.00, 1.55),  # **t-at-H**e
    (6.25, 4.00, 1.45),  # **tf**g
]
```

---

## 四、竞彩胜平负赔率（500.com官方）

| 结果 | 赔率 |
|------|------|
| 主胜（中国赢） | 2.25 |
| 平局 | 3.20 |
| 客胜（库拉索赢） | 2.69 |

---

## 五、赔率变动对比（初盘 → 即时）

| 公司 | 初盘胜 | 即时胜 | 变动 | 初盘平 | 即时平 | 变动 | 初盘负 | 即时负 | 变动 |
|------|--------|--------|------|--------|--------|------|--------|--------|------|
| 竞*官* | 3.50 | 5.42 | ↑ | 3.15 | 3.65 | ↑ | 1.90 | 1.49 | ↓ |
| 威**尔 | 3.10 | 6.00 | ↑ | 3.20 | 4.00 | ↑ | 2.05 | 1.44 | ↓ |
| *门 | 3.41 | 5.47 | ↑ | 3.22 | 3.60 | ↑ | 1.92 | 1.48 | ↓ |
| 立* | 3.60 | 6.00 | ↑ | 3.50 | 4.00 | ↑ | 2.00 | 1.53 | ↓ |
| **t3*5 | 3.40 | 5.25 | ↑ | 3.60 | 4.10 | ↑ | 1.91 | 1.53 | ↓ |
| I***rw**t*n | 3.40 | 6.50 | ↑ | 3.70 | 3.70 | — | 1.95 | 1.50 | ↓ |
| S**I | 3.85 | 6.00 | ↑ | 3.50 | 3.90 | ↑ | 1.80 | 1.50 | ↓ |
| *冠 | 3.50 | 5.60 | ↑ | 3.45 | 3.85 | ↑ | 1.97 | 1.56 | ↓ |
| 易*博 | 4.30 | 5.60 | ↑ | 3.50 | 3.90 | ↑ | 1.80 | 1.56 | ↓ |
| 伟* | 3.80 | 6.50 | ↑ | 3.40 | 3.70 | ↑ | 1.87 | 1.50 | ↓ |
| B**n | 3.50 | 6.00 | ↑ | 3.50 | 4.00 | ↑ | 1.98 | 1.53 | ↓ |
| Pi****le平* | 2.96 | 6.42 | ↑ | 3.14 | 3.99 | ↑ | 2.39 | 1.54 | ↓ |
| 10**t | 3.55 | 6.00 | ↑ | 3.75 | 4.00 | ↑ | 1.96 | 1.58 | ↓ |
| C***l | 3.60 | 6.00 | ↑ | 4.00 | 4.00 | — | 1.91 | 1.55 | ↓ |
| 利* | 3.75 | 5.70 | ↑ | 3.08 | 3.70 | ↑ | 1.82 | 1.47 | ↓ |
| U****t (优*客) | 3.60 | 5.75 | ↑ | 3.60 | 3.80 | ↑ | 1.88 | 1.54 | ↓ |
| S***t**g**t (博*堂) | 3.50 | 5.75 | ↑ | 3.90 | 4.00 | ↑ | 1.88 | 1.55 | ↓ |
| IBC**t (沙*) | 3.85 | 5.40 | ↑ | 3.45 | 3.90 | ↑ | 1.76 | 1.49 | ↓ |
| M****on88 (明*) | 4.00 | 5.20 | ↑ | 3.45 | 3.85 | ↑ | 1.72 | 1.50 | ↓ |
| 金*博 | 3.25 | 5.60 | ↑ | 3.45 | 3.85 | ↑ | 2.07 | 1.56 | ↓ |
| 香**会 | 3.45 | 4.35 | ↑ | 3.10 | 3.70 | ↑ | 1.92 | 1.58 | ↓ |
| 12**t (壹*博) | 4.00 | 6.10 | ↑ | 3.45 | 3.45 | — | 1.72 | 1.55 | ↓ |
| 大巨* | 4.10 | 6.20 | ↑ | 3.80 | 4.10 | ↑ | 1.88 | 1.58 | ↓ |
| 必* | 4.30 | 6.00 | ↑ | 3.15 | 4.00 | ↑ | 1.90 | 1.50 | ↓ |
| 18**t | 3.60 | 6.25 | ↑ | 3.40 | 3.50 | ↑ | 1.95 | 1.58 | ↓ |
| 1x**t | 3.65 | 5.16 | ↑ | 3.87 | 4.23 | ↑ | 2.05 | 1.61 | ↓ |
| **ts**n | 3.70 | 6.40 | ↑ | 3.25 | 3.70 | ↑ | 1.98 | 1.52 | ↓ |
| I***rt*ps | 3.85 | 6.25 | ↑ | 3.05 | 3.85 | ↑ | 1.85 | 1.45 | ↓ |
| **t-at-H**e | 3.30 | 6.00 | ↑ | 3.35 | 4.00 | ↑ | 2.05 | 1.55 | ↓ |
| **tf**g | 4.35 | 6.25 | ↑ | 3.35 | 4.00 | ↑ | 1.78 | 1.45 | ↓ |

> **趋势总结**：0/30家主胜降赔，27/30家平局升赔，0/30家客胜升赔。

---

## 六、快速复制到分析工具

```python
if __name__ == "__main__":

    # 比赛信息
    home_team     = "中国"
    away_team     = "库拉索"
    match_time    = "2026-03-27 14:00"
    league        = "国际赛"
    home_form     = "WLLWLL"
    away_form     = "DWDWWD"
    home_handicap = "LWLWLL"
    away_handicap = "WWLWLL"
    history       = ""
    macao_tip     = "库拉索 贏"

    initial_odds = [
        (3.50, 3.15, 1.90),  # 竞*官*
        (3.10, 3.20, 2.05),  # 威**尔
        (3.41, 3.22, 1.92),  # *门
        (3.60, 3.50, 2.00),  # 立*
        (3.40, 3.60, 1.91),  # **t3*5
        (3.40, 3.70, 1.95),  # I***rw**t*n
        (3.85, 3.50, 1.80),  # S**I
        (3.50, 3.45, 1.97),  # *冠
        (4.30, 3.50, 1.80),  # 易*博
        (3.80, 3.40, 1.87),  # 伟*
        (3.50, 3.50, 1.98),  # B**n
        (2.96, 3.14, 2.39),  # Pi****le平*
        (3.55, 3.75, 1.96),  # 10**t
        (3.60, 4.00, 1.91),  # C***l
        (3.75, 3.08, 1.82),  # 利*
        (3.60, 3.60, 1.88),  # U****t (优*客)
        (3.50, 3.90, 1.88),  # S***t**g**t (博*堂)
        (3.85, 3.45, 1.76),  # IBC**t (沙*)
        (4.00, 3.45, 1.72),  # M****on88 (明*)
        (3.25, 3.45, 2.07),  # 金*博
        (3.45, 3.10, 1.92),  # 香**会
        (4.00, 3.45, 1.72),  # 12**t (壹*博)
        (4.10, 3.80, 1.88),  # 大巨*
        (4.30, 3.15, 1.90),  # 必*
        (3.60, 3.40, 1.95),  # 18**t
        (3.65, 3.87, 2.05),  # 1x**t
        (3.70, 3.25, 1.98),  # **ts**n
        (3.85, 3.05, 1.85),  # I***rt*ps
        (3.30, 3.35, 2.05),  # **t-at-H**e
        (4.35, 3.35, 1.78),  # **tf**g
    ]

    realtime_odds = [
        (5.42, 3.65, 1.49),  # 竞*官*
        (6.00, 4.00, 1.44),  # 威**尔
        (5.47, 3.60, 1.48),  # *门
        (6.00, 4.00, 1.53),  # 立*
        (5.25, 4.10, 1.53),  # **t3*5
        (6.50, 3.70, 1.50),  # I***rw**t*n
        (6.00, 3.90, 1.50),  # S**I
        (5.60, 3.85, 1.56),  # *冠
        (5.60, 3.90, 1.56),  # 易*博
        (6.50, 3.70, 1.50),  # 伟*
        (6.00, 4.00, 1.53),  # B**n
        (6.42, 3.99, 1.54),  # Pi****le平*
        (6.00, 4.00, 1.58),  # 10**t
        (6.00, 4.00, 1.55),  # C***l
        (5.70, 3.70, 1.47),  # 利*
        (5.75, 3.80, 1.54),  # U****t (优*客)
        (5.75, 4.00, 1.55),  # S***t**g**t (博*堂)
        (5.40, 3.90, 1.49),  # IBC**t (沙*)
        (5.20, 3.85, 1.50),  # M****on88 (明*)
        (5.60, 3.85, 1.56),  # 金*博
        (4.35, 3.70, 1.58),  # 香**会
        (6.10, 3.45, 1.55),  # 12**t (壹*博)
        (6.20, 4.10, 1.58),  # 大巨*
        (6.00, 4.00, 1.50),  # 必*
        (6.25, 3.50, 1.58),  # 18**t
        (5.16, 4.23, 1.61),  # 1x**t
        (6.40, 3.70, 1.52),  # **ts**n
        (6.25, 3.85, 1.45),  # I***rt*ps
        (6.00, 4.00, 1.55),  # **t-at-H**e
        (6.25, 4.00, 1.45),  # **tf**g
    ]
```